--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "envalid": "^7.3.1",
     "express": "^4.18.1",
     "firebase-admin": "^11.5.0",
+    "googleapis": "^137.1.0",
     "handlebars": "^4.7.7",
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
@@ -49,6 +50,7 @@
     "mongoose": "^6.5.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "otp-generator": "^4.0.0",
     "qrcode": "^1.5.1",
     "socket.io": "^4.6.0",
