--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
     "http-errors": "^2.0.0",
+    "http-status-codes": "^2.3.0",
     "image-to-base64": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
