--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,47 +24,44 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "importHelpers": true,
-    "baseUrl": "src",
+    // "baseUrl": "src",
     "paths": {
-      "@/*": [
-        "*"
-      ],
-      "@config": [
-        "config"
-      ],
-      "@auth": [
-        "auth"
-      ],
-      "@email": [
-        "email"
-      ],
-      "@user": [
-        "user"
-      ],
-      "@constants/*": [
-        "core/constants/*"
-      ],
-      "@databases": [
-        "core/databases"
-      ],
-      "@exceptions/*": [
-        "core/exceptions/*"
-      ],
-      "@interfaces/*": [
-        "interfaces/*"
-      ],
-      "@middlewares/*": [
-        "core/middlewares/*"
-      ],
-      "@routes/*": [
-        "core/routes/*"
-      ],
-      "@services/*": [
-        "services/*"
-      ],
-      "@utils/*": [
-        "core/utils/*"
-      ]
+      // "@/*": [
+      //   "*"
+      // ],
+      // "@config": [
+      //   "config"
+      // ],
+      // "@email": [
+      //   "email"
+      // ],
+      // "@user": [
+      //   "user"
+      // ],
+      // "@constants/*": [
+      //   "core/constants/*"
+      // ],
+      // "@databases": [
+      //   "core/databases"
+      // ],
+      // "@exceptions/*": [
+      //   "core/exceptions/*"
+      // ],
+      // "@interfaces/*": [
+      //   "interfaces/*"
+      // ],
+      // "@middlewares/*": [
+      //   "core/middlewares/*"
+      // ],
+      // "@routes/*": [
+      //   "core/routes/*"
+      // ],
+      // "@services/*": [
+      //   "services/*"
+      // ],
+      // "@utils/*": [
+      //   "core/utils/*"
+      // ]
     }
   },
   "include": [
