--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mongoose": "^6.5.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.12.0",
     "nodemailer": "^6.9.13",
     "otp-generator": "^4.0.0",
     "qrcode": "^1.5.1",
@@ -60,6 +61,7 @@
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
     "twilio": "^3.84.0",
+    "typeorm": "^0.3.20",
     "vault.ist-sdk": "^1.1.3",
     "winston": "^3.8.1",
     "winston-daily-rotate-file": "^4.7.1"
