--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "otp-generator": "^4.0.0",
     "qrcode": "^1.5.1",
     "socket.io": "^4.6.0",
+    "sqlite3": "^5.1.7",
     "stripe": "^11.15.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
@@ -64,7 +65,8 @@
     "typeorm": "^0.3.20",
     "vault.ist-sdk": "^1.1.3",
     "winston": "^3.8.1",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
