update product to camel case

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
+    "moduleResolution": "Node",
     "module": "commonjs",
     "pretty": true,
     "sourceMap": true,
