--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest --forceExit --detectOpenHandles",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
     "lint:fix": "npm run lint -- --fix",
+    "migrate:data": "ts-node data-migrations.ts",
     "deploy:prod": "npm run build && pm2 start ecosystem.config.js --only prod",
     "deploy:dev": "pm2 start ecosystem.config.js --only dev",
     "migration:generate": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate ./src/migrations/InitialMigration -d ./src/core/database/index.ts",
@@ -44,6 +45,7 @@
     "envalid": "^7.3.1",
     "express": "^4.18.1",
     "firebase-admin": "^13.2.0",
+    "glob": "^11.0.1",
     "googleapis": "^137.1.0",
     "handlebars": "^4.7.7",
     "helmet": "^5.1.1",
