--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "array-paginator": "^2.0.0",
     "authenticator": "^1.1.5",
     "axios": "^1.3.2",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "binance-api-node": "^0.12.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -69,6 +69,7 @@
     "stripe": "^11.15.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
+    "tslib": "^2.8.1",
     "twilio": "^3.84.0",
     "typeorm": "^0.3.20",
     "vault.ist-sdk": "^1.1.3",
@@ -90,7 +91,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.19.87",
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
@@ -114,6 +115,6 @@
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.7.0",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^5.8.3"
   }
 }
