--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cors": "^2.8.5",
     "cote": "^1.0.3",
     "country-state-city": "^3.1.2",
+    "crypto": "^1.0.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.1",
     "easyinvoice": "^3.0.11",
