--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "tslib": "^2.8.1",
     "twilio": "^3.84.0",
     "typeorm": "^0.3.20",
+    "uuidv4": "^6.2.13",
     "vault.ist-sdk": "^1.1.3",
     "winston": "^3.8.1",
     "winston-daily-rotate-file": "^4.7.1",
