--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yenreach-backend",
-  "version": "0.0.0",
+  "version": "1.0",
   "description": "Backend for Yenreach",
   "author": "",
   "license": "ISC",
@@ -14,49 +14,28 @@
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
     "lint:fix": "npm run lint -- --fix",
     "migrate:data": "ts-node data-migrations.ts",
-    "deploy:prod": "npm run build && pm2 start ecosystem.config.js --only prod",
-    "deploy:dev": "pm2 start ecosystem.config.js --only dev",
     "migration:generate": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate ./src/migrations/InitialMigration -d ./src/core/database/index.ts",
     "migration:create": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:create -d ./src/core/database/index.ts ./src/migrations/",
     "migration:run": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d ./src/core/database/index.ts",
     "migration:revert": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert -d ./src/core/database/index.ts"
   },
   "dependencies": {
-    "@dicebear/collection": "^5.2.0",
-    "@dicebear/core": "^5.2.0",
-    "@hokify/agenda": "^6.3.0",
-    "@sendgrid/mail": "^8.1.4",
-    "@waape/mongoose-float": "^1.0.1",
-    "array-paginator": "^2.0.0",
-    "authenticator": "^1.1.5",
+    "@sendgrid/mail": "^8.1.5",
     "axios": "^1.3.2",
     "bcrypt": "^5.1.1",
-    "binance-api-node": "^0.12.3",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "cote": "^1.0.3",
-    "country-state-city": "^3.1.2",
-    "crypto": "^1.0.1",
-    "date-fns": "^2.29.3",
     "dotenv": "^16.0.1",
-    "easyinvoice": "^3.0.11",
-    "envalid": "^7.3.1",
     "express": "^4.18.1",
     "firebase-admin": "^13.2.0",
     "glob": "^11.0.1",
-    "googleapis": "^137.1.0",
     "handlebars": "^4.7.7",
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.3.0",
-    "image-to-base64": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
-    "moment": "^2.29.4",
-    "mongoose": "^6.5.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
@@ -64,17 +43,11 @@
     "nodemailer": "^6.9.13",
     "otp-generator": "^4.0.0",
     "pg": "^8.14.1",
-    "qrcode": "^1.5.1",
-    "socket.io": "^4.6.0",
-    "sqlite3": "^5.1.7",
-    "stripe": "^11.15.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
     "tslib": "^2.8.1",
-    "twilio": "^3.84.0",
     "typeorm": "^0.3.20",
     "uuidv4": "^6.2.13",
-    "vault.ist-sdk": "^1.1.3",
     "winston": "^3.8.1",
     "winston-daily-rotate-file": "^4.7.1",
     "zod": "^3.24.1"
@@ -88,13 +61,10 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/hpp": "^0.2.2",
-    "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.19.87",
-    "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
@@ -104,19 +74,16 @@
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.1",
-    "jest": "^28.1.1",
     "lint-staged": "^13.0.3",
-    "node-config": "^0.0.2",
-    "node-gyp": "^9.1.0",
     "nodemon": "^3.1.9",
-    "pm2": "^5.2.0",
     "prettier": "^2.7.1",
-    "supertest": "^6.2.4",
-    "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.7.0",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^5.8.3"
-  }
+  },
+  "engines": {
+    "node": ">=20"
+  },
+  "engineStrict": true
 }
