--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cote": "^1.2.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "firebase-admin": "^13.2.0",
