fix:fixed deployment crash

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,78 +1,25 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
-    "target": "es2017",
-    "lib": [
-      "es2017",
-      "esnext.asynciterable"
-    ],
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "forceConsistentCasingInFileNames": true,
+    "target": "ES2020",
+    "module": "CommonJS",
+    "lib": ["ES2020", "ESNext.AsyncIterable"],
     "moduleResolution": "Node",
-    "module": "commonjs",
-    "pretty": true,
-    "sourceMap": true,
-    "declaration": true,
     "outDir": "dist",
-    "allowJs": true,
-    "noEmit": false,
+    "rootDir": "src",
+    "strict": false,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "importHelpers": true,
-    // "baseUrl": "src",
-    "paths": {
-      // "@/*": [
-      //   "*"
-      // ],
-      // "@config": [
-      //   "config"
-      // ],
-      // "@email": [
-      //   "email"
-      // ],
-      // "@user": [
-      //   "user"
-      // ],
-      // "@constants/*": [
-      //   "core/constants/*"
-      // ],
-      // "@databases": [
-      //   "core/databases"
-      // ],
-      // "@exceptions/*": [
-      //   "core/exceptions/*"
-      // ],
-      // "@interfaces/*": [
-      //   "interfaces/*"
-      // ],
-      // "@middlewares/*": [
-      //   "core/middlewares/*"
-      // ],
-      // "@routes/*": [
-      //   "core/routes/*"
-      // ],
-      // "@services/*": [
-      //   "services/*"
-      // ],
-      // "@utils/*": [
-      //   "core/utils/*"
-      // ]
-    }
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "sourceMap": true,
+    "declaration": false,
+    "pretty": true,
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": false,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "strictPropertyInitialization": false
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.json",
-    ".env"
-  ],
-  "exclude": [
-    "node_modules",
-    "src/http",
-    "src/logs",
-    "src/tests"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist", "src/tests", "src/http", "src/logs"]
 }
