--- a/package.json
+++ b/package.json
@@ -54,8 +54,6 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.220",
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
@@ -65,7 +63,8 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
-    "@types/node": "^20.19.7",
+    "@types/node": "^22.16.3",
+    "@types/nodemailer": "^6.4.17",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
@@ -85,5 +84,6 @@
   },
   "engines": {
     "node": ">=20"
-  }
+  },
+  "engineStrict": true
 }
