--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "migration:revert": "npx ts-node -P ./tsconfig.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert -d ./src/core/database/index.ts"
   },
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^8.0.0",
     "@sendgrid/mail": "^8.1.5",
     "axios": "^1.3.2",
     "bcrypt": "^5.1.1",
@@ -51,7 +52,7 @@
     "uuidv4": "^6.2.13",
     "winston": "^3.8.1",
     "winston-daily-rotate-file": "^4.7.1",
-    "zod": "^3.24.1"
+    "zod": "^4.0.10"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
